@@ -4,6 +4,7 @@ cm4all-beng-proxy (0.5.4) unstable; urgency=low
   * added the BASE translation packet, supported by the translation cache
   * deprecated c:mode=proxy
   * rewrite-uri: always enable focus in mode=partial
+  * http-cache: don't cache resources with query string (RFC 2616 13.9)
 
  --
 
